--- a/pom.xml
+++ b/pom.xml
@@ -20,4 +20,17 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <!--targetPath>src/main/resources</targetPath-->
+            </resource>
+        </resources>
+    </build>
+
 </project>
